<resources>
    <string name="app_name">ReignAndroidApp</string>
    <string name="login">Login</string>
    <string name="rosefire_login">ROSEFIRE LOGIN</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="system_name">System Name</string>
    <string name="usage_high">High</string>
    <string name="system_active">Active</string>
    <string name="system_id">System ID</string>
    <string name="system_token">System Token</string>
    <string name="default_system_name">System Name</string>
    <string name="stats">Stats</string>
    <string name="default_cpu_percent">CPU: 20%</string>
    <string name="default_mem_percent">MEM: 10%</string>
    <string name="view_processes">View Processes</string>
    <string name="commands">Commands</string>
    <string name="queue">Queue</string>
    <string name="deafult_queue_size">0</string>
    <string name="output">Output</string>
    <string name="view_history">View History</string>
    <string name="command_start">Command:</string>
    <string name="command_output">Output:</string>
    <string name="history_command">History Command</string>
    <string name="history_output">History Output</string>
    <string name="history_command_heading">Command:</string>
    <string name="history_output_heading">Output:</string>
    <string name="process_name">Process Name</string>
    <string name="process_id">PID</string>
    <string name="refresh">Refresh</string>
    <string name="pid">PID:</string>
    <string name="temp_pid">111111</string>
    <string name="process_view_title">Process View</string>
    <string name="program_name_temp">Program Name</string>
    <string name="name_title">Name:</string>
    <string name="kill_process">Kill Process</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
</resources>
