<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_command_heading"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/command_history_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_command"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_output_heading"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/command_history_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_output"
            android:textSize="20sp"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>