<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/system_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:text="@string/default_system_name"
        android:textSize="40sp"
        />
    <TextView
        android:id="@+id/status_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/system_view_name"
        android:layout_alignParentStart="true"
        android:text="@string/stats"
        android:layout_marginBottom="10dp"
        android:textSize="30sp"
        />
    <LinearLayout
        android:id="@+id/cpu_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/status_line"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cpu_percent_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/default_cpu_percent"
            android:textSize="20sp"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:background="@android:color/holo_red_light"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/mem_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="40dp"
        android:layout_below="@id/cpu_data"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/CPU_Percent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/default_mem_percent"
            android:textSize="20sp"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:background="@android:color/holo_green_light"
            />
    </LinearLayout>

    <Button
        android:id="@+id/button_view_Processes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/mem_data"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:text="@string/view_processes"
        />
    <Button
        android:id="@+id/button_view_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/button_view_Processes"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:text="@string/view_history"
        />
    <TextView
        android:id="@+id/command_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_view_history"
        android:layout_alignParentStart="true"
        android:text="@string/commands"
        android:textSize="30sp"/>
    <LinearLayout
        android:id="@+id/command_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/command_line">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/holo_blue_light">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/queue"
                android:layout_margin="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deafult_queue_size"
                android:gravity="center"
                android:layout_margin="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:background="@android:color/holo_blue_light">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/output"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deafult_queue_size"
                android:gravity="center"
                android:layout_margin="20dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/command_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_queue_view"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/queue"/>
        <Button
            android:id="@+id/button_output_view"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:text="@string/output"/>

    </LinearLayout>

</RelativeLayout>